[package]
name = "latex-to-html"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "Latex to html converter"
repository = "https://github.com/mbid/latex-to-html"

[dependencies]
nom = "7"
indoc = "1"
tempdir = "0"
minidom = "0"
minidom_writer = "1"
base64 = "0"
sha2 = "0"
hex = "0"
convert_case = "0"
itertools = "0"
rayon = "1"
